--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -63,7 +63,7 @@ input[type=text], input[type=email], textarea {
   
   /* Style the submit button with a specific background color etc */
   input[type=submit] {
-    background-color: #4CAF50;
+    background-color: rgba(185, 185, 185, 0.75);
     color: white;
     padding: 12px 20px;
     border: none;
@@ -73,7 +73,7 @@ input[type=text], input[type=email], textarea {
   
   /* When moving the mouse over the submit button, add a darker green color */
   input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: rgb(185, 185, 185);
   }
   
   /* Add a background color and some padding around the form */
